First-draft fix to #3979: support POST /api/v1/repos/{user|org}/{repo}/forks
Probably does not work.  Untested.
